--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -21,6 +21,7 @@
   "mytasks.nav.lockedByLockholder": "Locked by {lockholder}",
   "mytasks.unlock": "unlock {time}",
   "mytasks.tasks.title": "Task #{task} · Project #{project}",
+  "mytasks.tasks.button.retry": "Retry",
   "deleteModal.status.processing": "Processing",
   "deleteModal.status.success": "{type} deleted successfully.",
   "deleteModal.status.failure.projects": "An error occurred when trying to delete this project.",
@@ -111,6 +112,7 @@
   "home.testimonials.ifrc.bio": "Remote Coordinator for the IFRC Information Management Team for Cyclone Idai",
   "localeSelect.language": "Language",
   "formInputs.organisation.select": "Select organization",
+  "formInputs.country.select": "Country",
   "foooter.definition": "Tasking Manager is a platform where individuals can support humanitarian response by mapping in OpenStreetMap.",
   "footer.credits": "Made by HOTOSM Community. Get in touch.",
   "footer.feedback": "Give feedback on GitHub.",
@@ -651,6 +653,7 @@
   "user.settings.email.resend": "Resend validation email",
   "users.detail.MyProjects": "My projects",
   "users.detail.MyTasks": "My tasks",
+  "users.detail.MyTeams": "My teams",
   "users.detail.MyContribs": "My contributions",
   "users.detail.MyStats": "My stats",
   "users.list.search.username": "Search by username",
